--- a/css/style.css
+++ b/css/style.css
@@ -154,3 +154,63 @@ footer .mentions {
   position: absolute;
   bottom: 10px;
 }
+
+/*---------- 4. PAGE : covoiturage.php ----------*/
+.results {
+  padding: 40px;
+  text-align: center;
+}
+
+.trajet-card {
+  display: flex;
+  align-items: center;
+  border: 1px solid #ccc;
+  border-radius: 12px;
+  padding: 20px;
+  margin: 20px auto;
+  background-color: #f9f9f9;
+  max-width: 800px;
+}
+
+.trajet-left .photo-profil {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 2px solid #ccc;
+}
+
+.trajet-middle {
+  flex: 1;
+}
+
+.trajet-middle h3 {
+  margin-bottom: 6px;
+}
+
+.trajet-right {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 10px;
+}
+
+.badge-green {
+  background-color: #32cd32;
+  color: white;
+  padding: 4px 8px;
+  border-radius: 12px;
+  font-size: 14px;
+}
+
+.detail-btn {
+  background-color: #ace9e6;
+  color: #000000;
+  font-weight: 400;
+  padding: 10px 15px;
+  font-size: 16px;
+  border: solid 1px black;
+  border-radius: 10px;
+  cursor: pointer;
+  text-decoration: none;
+}
