--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 
 html,
 body {
-  height: 100%;
+  min-height: 100vh;
   font-family: Poppins, sans-serif;
   background-color: #fff;
   color: #222;
@@ -213,4 +213,43 @@ footer .mentions {
   border-radius: 10px;
   cursor: pointer;
   text-decoration: none;
+}
+/*---------- 6. PAGE : detail.php ----------*/
+.detail-container {
+  max-width: 800px;
+  margin: auto;
+  padding: 20px;
+}
+
+.trajet-detail-card {
+  display: flex;
+  gap: 30px;
+  background-color: #f9f9f9;
+  padding: 25px;
+  border-radius: 12px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.conducteur-info {
+  text-align: center;
+}
+
+.conducteur-info .photo-profil {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 10px;
+}
+
+.trajet-info p {
+  margin: 6px 0;
+}
+
+.btn-retour {
+  display: inline-block;
+  margin-top: 20px;
+  text-decoration: none;
+  color: #2adb59;
+  font-weight: bold;
 }
