--- a/css/style.css
+++ b/css/style.css
@@ -83,9 +83,12 @@ footer .mentions {
   font-size: 14px;
 }
 
-footer .mentions {
+.mentions {
   position: absolute;
   right: 20px;
+}
+span.menu-burger {
+  display: none;
 }
 
 /*---------- 3. COMPOSANT : hero-search ----------*/
@@ -184,6 +187,11 @@ footer .mentions {
   flex: 1;
 }
 
+section h1 {
+  font-size: 25px;
+  margin-bottom: 20px;
+}
+
 .trajet-middle h3 {
   margin-bottom: 6px;
 }
@@ -251,4 +259,45 @@ footer .mentions {
   text-decoration: none;
   color: #2adb59;
   font-weight: bold;
+}
+@media (max-width: 768px) {
+  header {
+    align-items: flex-start;
+  }
+  footer {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .mentions {
+    position: static;
+    right: auto;
+  }
+  ul {
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  .search-form {
+    flex-direction: column;
+  }
+  .car-image {
+    position: static;
+    margin-top: 20px;
+    max-width: 200px;
+  }
+  .hidemobile {
+    display: none;
+  }
+
+  .search-form .mobilebutton {
+    min-width: 200px;
+    align-self: center;
+    padding: 10px 30px;
+  }
+  span.menu-burger {
+    position: relative;
+    display: block;
+    z-index: 9;
+  }
 }
