--- a/css/style.css
+++ b/css/style.css
@@ -300,4 +300,21 @@ section h1 {
     display: block;
     z-index: 9;
   }
+  .menu {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: #fff;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 8;
+  }
+  header {
+    position: relative;
+    z-index: 10;
+  }
 }
