--- a/css/style.css
+++ b/css/style.css
@@ -303,7 +303,7 @@ section h1 {
   .menu {
     display: none;
     position: fixed;
-    top: 0;
+    top: 70px;
     left: 0;
     width: 100%;
     height: 100vh;
