--- a/css/style.css
+++ b/css/style.css
@@ -307,7 +307,7 @@ section h1 {
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: #fff;
+    background-color: #e5ffde;
     flex-direction: column;
     justify-content: center;
     align-items: center;
