--- a/css/style.css
+++ b/css/style.css
@@ -275,6 +275,30 @@ section h1 {
   color: #2adb59;
   font-weight: bold;
 }
+
+/*---------- 6. PAGE : detail.php ----------*/
+.mentions-legales-container h2 {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.mentions-legales-container {
+  min-height: 70vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.mentions-legales-container section {
+  max-width: 600px;
+  margin-bottom: 30px;
+}
+
+.mentions-legales-container h3 {
+  text-align: center;
+  margin-bottom: 10px;
+}
 /*---------- 6. PAGES : contact.php et inscrition.php ----------*/
 .form-container {
   text-align: center;
