--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ span.menu-burger {
   display: none;
 }
 
-/*---------- 3. COMPOSANT : hero-search ----------*/
+/*---------- 3. COMPOSANT : search_section ----------*/
 .hero-search {
   background-image: url("../assets/images/driver.jpg");
   background-color: rgba(255, 255, 255, 0.6);
@@ -160,7 +160,7 @@ span.menu-burger {
   bottom: 10px;
 }
 
-/*---------- 5. PAGE : covoiturage.php ----------*/
+/*---------- 5. PAGE : rides.php ----------*/
 .results {
   padding: 40px;
   text-align: center;
@@ -224,7 +224,7 @@ section h1 {
   cursor: pointer;
   text-decoration: none;
 }
-/*---------- 6. PAGE : detail.php ----------*/
+/*---------- 6. PAGE : rideDetail.php ----------*/
 .page-detail section {
   display: inline-block;
 }
@@ -283,7 +283,7 @@ section h1 {
   font-weight: bold;
 }
 
-/*---------- 7. PAGE : Mentions légales.php ----------*/
+/*---------- 7. PAGE : legal.php ----------*/
 .mentions-legales-container h2 {
   text-align: center;
   margin-bottom: 40px;
@@ -306,7 +306,7 @@ section h1 {
   text-align: center;
   margin-bottom: 10px;
 }
-/*---------- 8. PAGES : contact.php et inscrition.php ----------*/
+/*---------- 8. PAGES : contact.php et register.php ----------*/
 .form-container {
   text-align: center;
 }
