--- a/css/style.css
+++ b/css/style.css
@@ -138,26 +138,27 @@ span.menu-burger {
 }
 
 /*---------- 4. PAGE : index.php ----------*/
-.page-index main {
+.home-page__main {
   background: linear-gradient(180deg, #fff 78.37%, #2adb59 100%);
   position: relative;
 }
 
-.hero-presentation {
+.hero {
   padding-top: 40px;
   text-align: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
-.hero-presentation h2 {
+.hero__title {
   margin-bottom: 20px;
 }
 
-.car-image {
+.hero__illustration {
   position: absolute;
   bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 /*---------- 5. PAGE : rides.php ----------*/
