--- a/css/style.css
+++ b/css/style.css
@@ -21,40 +21,6 @@ body {
 }
 
 /*---------- 2. GLOBAL STYLES  ----------*/
-header {
-  background: linear-gradient(
-    90deg,
-    #7cd9a0 16.83%,
-    rgba(255, 255, 255, 0.1) 100%
-  );
-  padding: 5px 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-header .logo {
-  color: #fff;
-  font-size: 40px;
-  font-weight: 600;
-  text-decoration: none;
-}
-
-.logo .green {
-  color: #205b3f;
-}
-
-nav ul {
-  list-style: none;
-  display: flex;
-  gap: 15px;
-}
-
-nav a {
-  color: #000000;
-  text-decoration: none;
-  font-weight: 600;
-}
 
 main {
   flex: 1;
@@ -93,7 +59,43 @@ span.menu-burger {
   display: none;
 }
 
-/*---------- 3. COMPOSANT : search_section ----------*/
+/*---------- 3. COMPONENT : header.php ----------*/
+.site-header {
+  background: linear-gradient(
+    90deg,
+    #7cd9a0 16.83%,
+    rgba(255, 255, 255, 0.1) 100%
+  );
+  padding: 5px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.site-header__logo {
+  color: #fff;
+  font-size: 40px;
+  font-weight: 600;
+  text-decoration: none;
+}
+
+.site-header__logo--green {
+  color: #205b3f;
+}
+
+.site-header__link {
+  color: #000000;
+  text-decoration: none;
+  font-weight: 600;
+}
+
+.site-header__list {
+  list-style: none;
+  display: flex;
+  gap: 15px;
+}
+
+/*---------- 3. COMPONENT : search_section ----------*/
 .hero-search {
   background-image: url("../assets/images/driver.jpg");
   background-color: rgba(255, 255, 255, 0.6);
@@ -346,11 +348,10 @@ section h1 {
     align-self: center;
     padding: 10px 30px;
   }
-  span.menu-burger {
+  .menu-burger {
     position: relative;
-    display: block;
   }
-  .menu {
+  .site-header__menu {
     display: none;
     position: fixed;
     top: 70px;
