--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ main {
   display: none;
 }
 /*---------- 5. COMPONENT : search_section ----------*/
-.hero-search {
+.search-hero {
   background-image: url("../assets/images/driver.jpg");
   background-color: rgba(255, 255, 255, 0.6);
   background-blend-mode: lighten;
@@ -112,19 +112,19 @@ main {
   text-align: center;
 }
 
-.hero-search h1 {
+.search-hero__title {
   font-size: 28px;
   margin-bottom: 20px;
 }
 
-.search-form {
+.form-search {
   display: flex;
   gap: 10px;
   max-width: 1100px;
   margin: auto;
 }
 
-.search-form input {
+.form-search__input {
   padding: 10px;
   border: none;
   border-radius: 8px;
@@ -132,7 +132,7 @@ main {
   flex: 1;
 }
 
-.search-form button {
+.form-search__button {
   background-color: #ffffff;
   color: #000000;
   font-weight: 400;
@@ -317,6 +317,7 @@ section h1 {
 .form-container {
   text-align: center;
 }
+/*---------- MEDIA QUERIES ----------*/
 @media (max-width: 768px) {
   header {
     align-items: flex-start;
@@ -335,7 +336,7 @@ section h1 {
     align-items: flex-end;
   }
 
-  .search-form {
+  .form-search {
     flex-direction: column;
   }
   .car-image {
@@ -353,7 +354,7 @@ section h1 {
     padding: 10px 30px;
   }
   .menu-burger {
-    position: relative;
+    display: block;
   }
   .site-header__menu {
     display: none;
