--- a/css/style.css
+++ b/css/style.css
@@ -248,6 +248,7 @@ main {
 .ride-detail__card {
   display: flex;
   gap: 30px;
+  max-width: 800px;
   background-color: #f9f9f9;
   padding: 25px;
   border-radius: 12px;
