--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,7 @@ main {
 
 .search-hero__form {
   display: flex;
+  flex-direction: row;
   gap: 10px;
   max-width: 1100px;
   margin: auto;
@@ -358,49 +359,49 @@ main {
   .ride-detail {
     padding: 10px;
   }
-}
 
-.ride-detail__card {
-  gap: 20px;
-}
-.ride-detail__profile-photo {
-  width: 70px;
-  height: 70px;
-}
+  .ride-detail__card {
+    gap: 20px;
+  }
+  .ride-detail__profile-photo {
+    width: 70px;
+    height: 70px;
+  }
 
-.ride-detail__username {
-  font-size: 1.2rem;
-}
-.footer {
-  flex-direction: column;
-  align-items: center;
-}
+  .ride-detail__username {
+    font-size: 1.2rem;
+  }
+  .footer {
+    flex-direction: column;
+    align-items: center;
+  }
 
-.footer__legal {
-  position: static;
-  right: auto;
-}
+  .footer__legal {
+    position: static;
+    right: auto;
+  }
 
-.search-hero__form {
-  flex-direction: column;
-}
+  .search-hero__form {
+    flex-direction: column;
+  }
 
-.search-hero__button {
-  min-width: 200px;
-  align-self: center;
-  padding: 10px 30px;
-}
+  .search-hero__button {
+    min-width: 200px;
+    align-self: center;
+    padding: 10px 30px;
+  }
 
-.hero__illustration {
-  position: static;
-  margin-top: 20px;
-  transform: none;
-}
+  .hero__illustration {
+    position: static;
+    margin-top: 20px;
+    transform: none;
+  }
 
-.hero__image {
-  max-width: 200px;
-}
+  .hero__image {
+    max-width: 200px;
+  }
 
-.footer__logo--hide-mobile {
-  display: none;
+  .footer__logo--hide-mobile {
+    display: none;
+  }
 }
