--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,12 @@ main {
   flex: 1;
 }
 
+.error {
+  color: #dc3545;
+  text-align: center;
+  margin: 10px 0;
+}
+
 /*---------- 3. COMPONENT : footer.php ----------*/
 .footer {
   position: relative;
@@ -281,10 +287,6 @@ main {
   text-decoration: none;
   color: #2adb59;
   font-weight: bold;
-}
-.ride-detail__error {
-  color: red;
-  text-align: center;
 }
 /*---------- 9. PAGE : legal.php ----------*/
 .legal-container {
